Native/Test/KL/error-no-uni-op.kl
struct S
{
  Integer i;
};

function entry()
{
  var S s;
  report -s;
}
